// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle the descending sort direction 1`] = `
<div>
  <label
    id="aria-projects-sort"
  >
    projects.sort_by
    :
  </label>
  <Select
    aria-labelledby="aria-projects-sort"
    className="little-spacer-left input-medium it__projects-sort-select"
    components={
      Object {
        "Option": [Function],
      }
    }
    isClearable={false}
    isSearchable={false}
    onChange={[Function]}
    options={
      Array [
        Object {
          "className": undefined,
          "label": "projects.sorting.name",
          "value": "name",
        },
        Object {
          "className": undefined,
          "label": "projects.sorting.analysis_date",
          "value": "analysis_date",
        },
        Object {
          "className": undefined,
          "label": "projects.sorting.reliability",
          "value": "reliability",
        },
        Object {
          "className": undefined,
          "label": "projects.sorting.security",
          "value": "security",
        },
        Object {
          "className": undefined,
          "label": "projects.sorting.security_review",
          "value": "security_review",
        },
        Object {
          "className": undefined,
          "label": "projects.sorting.maintainability",
          "value": "maintainability",
        },
        Object {
          "className": undefined,
          "label": "projects.sorting.coverage",
          "value": "coverage",
        },
        Object {
          "className": undefined,
          "label": "projects.sorting.duplications",
          "value": "duplications",
        },
        Object {
          "className": undefined,
          "label": "projects.sorting.size",
          "value": "size",
        },
      ]
    }
  />
  <Tooltip
    mouseLeaveDelay={1}
    overlay="projects.sort_descending"
  >
    <ButtonIcon
      aria-label="projects.sort_descending"
      className="js-projects-sorting-invert spacer-left"
      color="#525252"
      innerRef={[Function]}
      onClick={[Function]}
    >
      <SortDescIcon
        className=""
      />
    </ButtonIcon>
  </Tooltip>
</div>
`;

exports[`should render correctly for leak view 1`] = `
<div>
  <label
    id="aria-projects-sort"
  >
    projects.sort_by
    :
  </label>
  <Select
    aria-labelledby="aria-projects-sort"
    className="little-spacer-left input-medium it__projects-sort-select"
    components={
      Object {
        "Option": [Function],
      }
    }
    isClearable={false}
    isSearchable={false}
    onChange={[Function]}
    options={
      Array [
        Object {
          "className": undefined,
          "label": "projects.sorting.analysis_date",
          "value": "analysis_date",
        },
        Object {
          "className": undefined,
          "label": "projects.sorting.name",
          "value": "name",
        },
        Object {
          "className": "projects-leak-sorting-option",
          "label": "projects.sorting.new_reliability",
          "value": "new_reliability",
        },
        Object {
          "className": "projects-leak-sorting-option",
          "label": "projects.sorting.new_security",
          "value": "new_security",
        },
        Object {
          "className": "projects-leak-sorting-option",
          "label": "projects.sorting.new_security_review",
          "value": "new_security_review",
        },
        Object {
          "className": "projects-leak-sorting-option",
          "label": "projects.sorting.new_maintainability",
          "value": "new_maintainability",
        },
        Object {
          "className": "projects-leak-sorting-option",
          "label": "projects.sorting.new_coverage",
          "value": "new_coverage",
        },
        Object {
          "className": "projects-leak-sorting-option",
          "label": "projects.sorting.new_duplications",
          "value": "new_duplications",
        },
        Object {
          "className": "projects-leak-sorting-option",
          "label": "projects.sorting.new_lines",
          "value": "new_lines",
        },
      ]
    }
    value={
      Object {
        "className": "projects-leak-sorting-option",
        "label": "projects.sorting.new_coverage",
        "value": "new_coverage",
      }
    }
  />
  <Tooltip
    mouseLeaveDelay={1}
    overlay="projects.sort_ascending"
  >
    <ButtonIcon
      aria-label="projects.sort_ascending"
      className="js-projects-sorting-invert spacer-left"
      color="#525252"
      innerRef={[Function]}
      onClick={[Function]}
    >
      <SortAscIcon
        className=""
      />
    </ButtonIcon>
  </Tooltip>
</div>
`;

exports[`should render correctly for overall view 1`] = `
<div>
  <label
    id="aria-projects-sort"
  >
    projects.sort_by
    :
  </label>
  <Select
    aria-labelledby="aria-projects-sort"
    className="little-spacer-left input-medium it__projects-sort-select"
    components={
      Object {
        "Option": [Function],
      }
    }
    isClearable={false}
    isSearchable={false}
    onChange={[Function]}
    options={
      Array [
        Object {
          "className": undefined,
          "label": "projects.sorting.name",
          "value": "name",
        },
        Object {
          "className": undefined,
          "label": "projects.sorting.analysis_date",
          "value": "analysis_date",
        },
        Object {
          "className": undefined,
          "label": "projects.sorting.reliability",
          "value": "reliability",
        },
        Object {
          "className": undefined,
          "label": "projects.sorting.security",
          "value": "security",
        },
        Object {
          "className": undefined,
          "label": "projects.sorting.security_review",
          "value": "security_review",
        },
        Object {
          "className": undefined,
          "label": "projects.sorting.maintainability",
          "value": "maintainability",
        },
        Object {
          "className": undefined,
          "label": "projects.sorting.coverage",
          "value": "coverage",
        },
        Object {
          "className": undefined,
          "label": "projects.sorting.duplications",
          "value": "duplications",
        },
        Object {
          "className": undefined,
          "label": "projects.sorting.size",
          "value": "size",
        },
      ]
    }
    value={
      Object {
        "className": undefined,
        "label": "projects.sorting.name",
        "value": "name",
      }
    }
  />
  <Tooltip
    mouseLeaveDelay={1}
    overlay="projects.sort_ascending"
  >
    <ButtonIcon
      aria-label="projects.sort_ascending"
      className="js-projects-sorting-invert spacer-left"
      color="#525252"
      innerRef={[Function]}
      onClick={[Function]}
    >
      <SortAscIcon
        className=""
      />
    </ButtonIcon>
  </Tooltip>
</div>
`;

exports[`should render option correctly 1`] = `
<Option
  className="it__project-sort-option-foo undefined"
  data={
    Object {
      "label": "foo",
      "short": "fo",
      "value": "foo",
    }
  }
>
  fo
</Option>
`;

exports[`should render option correctly 2`] = `
<Option
  className="it__project-sort-option-foo undefined"
  data={
    Object {
      "label": "foo",
      "value": "foo",
    }
  }
/>
`;
